add mais rastros e troca da fonte, ajuste no posicionamento do score

--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -66,49 +66,6 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="spWave" uid="4">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <instance-variables>
-                        <INI_X>19</INI_X>
-                        <INI_Y>272</INI_Y>
-                        <SPEED_1>100</SPEED_1>
-                        <SPEED_2>600</SPEED_2>
-                        <TIMER_ON>true</TIMER_ON>
-                    </instance-variables>
-                    <behavior-instances>
-                        <behavior-instance type="Bullet">
-                            <properties>
-                                <speed>400</speed>
-                                <acceleration>0</acceleration>
-                                <gravity>0</gravity>
-                                <bounce-off-solids>No</bounce-off-solids>
-                                <set-angle>No</set-angle>
-                                <initial-state>Disabled</initial-state>
-                            </properties>
-                        </behavior-instance>
-                        <behavior-instance type="DestroyOutsideLayout" />
-                        <behavior-instance type="Timer" />
-                    </behavior-instances>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>300</x>
-                        <y>1033</y>
-                        <z>0</z>
-                        <width>164</width>
-                        <height>454.825622559</height>
-                        <depth>0</depth>
-                        <hotspotX>1</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
                 <instance type="spTimer" uid="28">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
@@ -156,11 +113,33 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>67</x>
-                        <y>-119</y>
+                        <x>-241</x>
+                        <y>-203</y>
                         <z>0</z>
                         <width>19</width>
                         <height>4</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="spBackground" uid="23">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>640</x>
+                        <y>360</y>
+                        <z>0</z>
+                        <width>1280</width>
+                        <height>720</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -475,23 +454,44 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="spBackground" uid="23">
+                <instance type="spWave" uid="4">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <INI_X>19</INI_X>
+                        <INI_Y>272</INI_Y>
+                        <SPEED_1>100</SPEED_1>
+                        <SPEED_2>600</SPEED_2>
+                        <TIMER_ON>true</TIMER_ON>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="Bullet">
+                            <properties>
+                                <speed>400</speed>
+                                <acceleration>0</acceleration>
+                                <gravity>0</gravity>
+                                <bounce-off-solids>No</bounce-off-solids>
+                                <set-angle>No</set-angle>
+                                <initial-state>Disabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="DestroyOutsideLayout" />
+                        <behavior-instance type="Timer" />
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>640</x>
-                        <y>360</y>
+                        <x>300</x>
+                        <y>1024.412841797</y>
                         <z>0</z>
-                        <width>1280</width>
-                        <height>720</height>
+                        <width>164</width>
+                        <height>472</height>
                         <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
+                        <hotspotX>1</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
@@ -564,8 +564,8 @@
                     <properties>
                         <text>MAX</text>
                         <initial-visibility>Visible</initial-visibility>
-                        <font>,-19,400,0</font>
-                        <color>153,204,255</color>
+                        <font>Ventura Edding,-19,500,0</font>
+                        <color>110,58,35</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -635,8 +635,8 @@
                     <properties>
                         <text>SCORE</text>
                         <initial-visibility>Visible</initial-visibility>
-                        <font>,-19,400,0</font>
-                        <color>255,255,204</color>
+                        <font>Ventura Edding,-19,500,0</font>
+                        <color>110,58,35</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -662,8 +662,8 @@
                     <properties>
                         <text>0</text>
                         <initial-visibility>Visible</initial-visibility>
-                        <font>Press Start 2P,-32,500,0</font>
-                        <color>255,153,0</color>
+                        <font>Ventura Edding,-48,500,0</font>
+                        <color>110,58,35</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -674,10 +674,10 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>128</x>
-                        <y>59</y>
+                        <y>50</y>
                         <z>0</z>
-                        <width>118.374557495</width>
-                        <height>32</height>
+                        <width>71</width>
+                        <height>43</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -689,8 +689,8 @@
                     <properties>
                         <text>0</text>
                         <initial-visibility>Visible</initial-visibility>
-                        <font>Press Start 2P,-32,500,0</font>
-                        <color>51,0,204</color>
+                        <font>Ventura Edding,-48,500,0</font>
+                        <color>110,58,35</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -701,10 +701,10 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>288</x>
-                        <y>59</y>
+                        <y>50</y>
                         <z>0</z>
-                        <width>70.992492676</width>
-                        <height>32</height>
+                        <width>71</width>
+                        <height>43</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
