--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -147,6 +147,43 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="spWaves" uid="39">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <effect-instances>
+                        <effect-instance type="WaterBackground">
+                            <parameters>
+                                <angle>83</angle>
+                                <delta>60</delta>
+                                <emboss>-0.3</emboss>
+                                <frequency>4</frequency>
+                                <intensity>2</intensity>
+                                <reflectivity>400</reflectivity>
+                                <speed>-0.1</speed>
+                                <x-speed>-0.3</x-speed>
+                                <y-speed>0.05</y-speed>
+                            </parameters>
+                        </effect-instance>
+                    </effect-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>641</x>
+                        <y>345.5</y>
+                        <z>0</z>
+                        <width>1280</width>
+                        <height>867</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
                 <instance type="spSand" uid="2">
                     <properties>
                         <initial-visibility>Invisible</initial-visibility>
